# promptpropulser

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  cli.py  install.ps1  install.sh  pyproject.toml  server.py
data/: BENCHMARK_HISTORY.md  BENCHMARK_REPORT.md  BENCHMARK_V2_REPORT.md  benchmark_prompts.json  benchmark_v2_prompts.json  benchmark_v3_prompts.json
docs/: architecture.md
ppc/: __init__.py  benchmark.py  critic_llm.py  loop.py  session_store.py
ppc/analyzers/: complexity.py  constraint.py  intent.py
ppc/config/: guardrails.py  heuristics.py  modes.py  rules.py  thresholds.py
ppc/delivery/: formatter.py
ppc/engine/: orchestrator.py  pipeline.py
ppc/integration/: anthropic.py  base.py  langchain.py
ppc/reflection/: critic.py  pipeline.py
ppc/schemas/: input.py  output.py  session_log.py
ppc/transformers/: compress.py  echo.py  lock.py  reinforcement.py
prompts/: system_prompt.md
prompts/few_shot/: architect.txt  basic.txt  brutal.txt  code.txt  compress.txt  focus.txt  reflection.txt  teacher.txt
tests/: test_complexity.py  test_compress.py  test_constraint.py  test_critic.py  test_critic_llm.py  test_echo.py  test_integration.py  test_intent.py  test_lock.py  test_loop.py  test_modes.py  test_pipeline.py  test_reflection.py  test_reinforcement.py
tools/: compare_benchmarks.py  compare_v1_v2.py  compare_v3.py  print_benchmark.py  print_v2.py  run_v2_quick.py
