[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpropulser"
version = "1.0.0"
description = "PromptPropulserClaude — Contextual cognition orchestration layer for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PromptPropulserClaude Team"}
]
keywords = ["llm", "prompt-engineering", "claude", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.111.0", "uvicorn>=0.29.0"]
langchain = ["langchain>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
ppc = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppc*"]
exclude = ["tests*", "data*"]

